# projects-public

dagster/breweries_proj/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
dagster/breweries_proj/breweries_data/: __init__.py  assets.py  io_managers.py
faker/: main.py  pyproject.toml
power_bi/corona_virus/: CoronaVirus.pbix  README.md
power_bi/snowflake_data_catalog/: README.md  SnowflakeCatalog.pbix  create_role.sql
snowpark/: etl.py  pyproject.toml
